--- a/PowerHotkeys/PowerHotkeys.csproj
+++ b/PowerHotkeys/PowerHotkeys.csproj
@@ -6,14 +6,13 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Microsoft.Toolkit.Win32.UI.Controls" Version="6.1.3" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
-    <PackageReference Include="System.Windows.Forms" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
